<resources>
    <string name="app_name">行天下</string>
    <string name="hcxf">客运东站——皇城相府（票价2元）
发车时间：07:20—19:00
返程时间：19:00前
皇城相府门票价：120元/人
相府庄园嘉年华门票价50元/人
景区地址：晋城市阳城县北留镇皇城村</string>
    <string name="wml">客运东站——王莽岭（票价10元）
发车时间：09：00
返程时间：16：00
王莽岭门票价：110元/人
景区地址：晋城市陵川县古郊乡王莽岭村
</string>
    <string name="jss">客运东站——聚寿山（票价4元）
发车时间：07：00—16:00
返程时间：09：00—18:00
聚寿山不收门票
景区地址：晋城市泽州县晋庙铺镇范谷坨村</string>
    <string name="tgwf">
晋城客运东站——天官王府（票价2元）
发车时间：08：00
返程时间：16：00
天官王府门票价：40元/人
景区地址：晋城市阳城县润城镇上庄村</string>
    <string name="js">白马寺——珏山（票价2元）
发车时间：7：30
返程时间：17：00
珏山门票价：60元/人
景区地址：晋城市泽州县金村镇寺南庄村</string>
    <string name="st">晋城人民广场——司徒小镇（票价1元）
发车时间：06：00
返程时间：20：00
司徒小镇不收大门票
景区地址：晋城市主城区东北5公里处，城北高速公路口（金村收费站）</string>
    <string name="mh">客运东站——蟒河（票价5元）
发车时间：8：00
返程时间：19：00
蟒河门票价：60元/人
景区地址：晋城市阳城县蟒河镇蟒河村</string>
    <string name="hint">小提示：点击图片对应的蓝色标题可以进入该景点详情页面哦!</string>
  <string name="situ">司徒小镇，位于山西东南部，晋城市城区中心的东北部，西距晋城市区北高速路口5公里。占地千余亩，是集特色餐饮、休闲娱乐、农耕体验、旅游购物、文化演艺等为一体的“老晋城民俗印象基地，新晋城美食旅游地标”。
每年春节期间接待游客量均有百万以上人次，屡次刷新晋城旅游行业新记录。大多是来自晋、豫、冀、陕以及长三角游客，奔着八百种山西各地美食和三百种民俗，特别是晋城市独有的“泽州打铁花”而来。
晋城历史悠久古称泽州、泽州府，是山西通往中原的门户。自古为兵家必争之地，素有“河东屏翰、中原门户、三晋咽喉”的美誉。
司徒小镇一年四季景色不同，不同时间来到小镇都会有不同的感受和收获。
3-5月：到小镇的稻草人庄园看桃红柳绿、到凤栖湖看湖光潋滟、到开心农牧场看欣欣向荣。在小镇看百花
开放，落英缤纷。
6-8月：晋城天气夏季凉爽，夜晚更是清新怡人，夏季可来司徒小镇避暑。另外，司徒小镇夜景十分美丽，夜 游小镇，已经成为晋城当地人的一项非常流行的夏日休闲活动。
9-10月：到小镇的农场看丰收胜景，开心农场采摘果蔬，阳光牧场喂食动物，感受秋高气爽。
春 节 ：园区举办的“千人打铁花”“万人戏雪乐园”“百组山西民俗花灯”“千人社火巡游”等春节主题项目和民俗文化演艺，非物质文化遗产打铁花表演更是人山人海，受到无数欢迎和赞誉。
园区特色：千人打铁花，明清老城，六尺巷，绣楼广场，万人戏雪乐园，儿童乐园，老锅巷，鬼街怪屋，日租别墅，极限卡丁车，蝴蝶谷。</string>

    <array name="gjc">
        <item>1号线：汇迁小区站→北岩煤矿站/7.5KM</item>
        <item>2号线：晋城八中站→火车站/8.0KM</item>
        <item>3号线：苗匠站→火车站/9.5KM</item>
        <item>4号线：玉龙潭公园站→玉龙潭公园站/(环城)</item>
        <item>5号线：晋城宾馆站→金村站/14.0KM</item>
        <item>6号线：人民广场站→巴公站/21.0KM</item>
        <item>7号线：人民广场站→西峪站/10.5KM</item>
        <item>8号线：客运东站→客运东站/(环城)</item>
        <item>10号线：喜临门家居博览中心站→凤华学校站/12.5KM</item>
        <item>11号线：古书院社区站→市三医院站/(环城)</item>
        <item>12号线：西马匠站→金村站/10.5KM</item>
        <item>16号线：人民广场站→周村站/34.0KM</item>
    </array>

</resources>
